# VortexEditor

./: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/engine/: audio_engine.cpp  audio_engine.h  frame_buffer.cpp  frame_buffer.h  timeline.cpp  timeline.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h  video_engine.cpp  video_engine.h
app/src/main/cpp/filters/: blur_filter.cpp  blur_filter.h  color_filter.cpp  color_filter.h  filter_manager.cpp  filter_manager.h  gl_renderer.cpp  gl_renderer.h  sharpen_filter.cpp  sharpen_filter.h
app/src/main/cpp/include/: common.h
app/src/main/cpp/jni/: video_editor_jni.cpp
app/src/main/cpp/utils/: image_utils.cpp  image_utils.h  memory_pool.cpp  memory_pool.h  thread_pool.cpp  thread_pool.h  time_utils.cpp  time_utils.h
app/src/main/res/drawable/: bg_circle.xml  bg_color_circle.xml  bg_filter_item.xml  bg_selected.xml  bg_timeline_clip.xml  ic_export.xml  ic_filter.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_redo.xml  ic_speed.xml  ic_split.xml  ic_text.xml  ic_trim.xml  ic_undo.xml  ic_video.xml  spinner_background.xml
app/src/main/res/layout/: activity_editor.xml  activity_export.xml  activity_main.xml  dialog_export.xml  dialog_speed.xml  fragment_audio.xml  fragment_background.xml  fragment_filters.xml  fragment_stickers.xml  fragment_text.xml  fragment_transitions.xml  fragment_trim.xml  item_color.xml  item_filter.xml  item_font.xml  item_mode.xml  item_sticker.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
(+33 files in other folders)
